syntax = "proto3";

package clanker.v1;

// Main event container for a block
message ClankerEvents {
  repeated TokenCreated token_created = 1;
  repeated FeeClaim fee_claims = 2;
  repeated ExtensionTriggered extensions_triggered = 3;
  repeated TokenMetadataUpdate metadata_updates = 4;
  repeated TokenVerified verifications = 5;
}

// Emitted when a new Clanker token is deployed
message TokenCreated {
  string tx_hash = 1;
  uint64 block_number = 2;
  uint64 block_timestamp = 3;
  uint64 log_index = 4;

  string token_address = 5;
  string token_admin = 6;
  string token_name = 7;
  string token_symbol = 8;
  string token_image = 9;
  string token_metadata = 10;  // JSON string with description, social links, etc.
  string token_context = 11;   // JSON string with deployment context

  // Pool configuration
  string pool_id = 12;
  string pool_hook = 13;
  string paired_token = 14;
  int32 starting_tick = 15;

  // Locker and MEV module
  string locker = 16;
  string mev_module = 17;

  // Extensions (airdrop, presale, etc.)
  uint64 extensions_supply = 18;
  repeated string extensions = 19;

  // Deployer
  string msg_sender = 20;
}

// Stored token info
message Token {
  string address = 1;
  string name = 2;
  string symbol = 3;
  string admin = 4;
  string image = 5;
  string pool_id = 6;
  string paired_token = 7;
  uint64 created_at_block = 8;
  uint64 created_at_timestamp = 9;
}

// Fee claim event
message FeeClaim {
  string tx_hash = 1;
  uint64 block_number = 2;
  uint64 block_timestamp = 3;
  uint64 log_index = 4;

  string token = 5;
  string recipient = 6;
  string amount = 7;  // BigInt as string
}

// Extension triggered (airdrop, presale, etc.)
message ExtensionTriggered {
  string tx_hash = 1;
  uint64 block_number = 2;
  uint64 block_timestamp = 3;
  uint64 log_index = 4;

  string extension = 5;
  string extension_supply = 6;  // BigInt as string
  string msg_value = 7;         // BigInt as string
}

// Token metadata update
message TokenMetadataUpdate {
  string tx_hash = 1;
  uint64 block_number = 2;
  uint64 block_timestamp = 3;
  uint64 log_index = 4;

  string token_address = 5;
  string update_type = 6;  // "image" or "metadata"
  string new_value = 7;
}

// Token verified
message TokenVerified {
  string tx_hash = 1;
  uint64 block_number = 2;
  uint64 block_timestamp = 3;
  uint64 log_index = 4;

  string token_address = 5;
  string admin = 6;
}

// ERC20 transfers for Clanker tokens
message TokenTransfers {
  repeated TokenTransfer transfers = 1;
}

message TokenTransfer {
  string tx_hash = 1;
  uint64 block_number = 2;
  uint64 block_timestamp = 3;
  uint64 log_index = 4;

  string token_address = 5;
  string from = 6;
  string to = 7;
  string amount = 8;  // BigInt as string
}
